Fix: unresolved reference context em MainActivity